Fixed: Height of the floating nav bar when in compact mode not single toolbar Fixed: Known issue from the other version that the the floating toolbar makes the URL-Bar dissapear Added: Sidebar-Alignmetnt; Rules to fix the alignment and height of the sidebar

--- a/Neo Zen V1.0.0/NeoZen/Theme/Nav-Bar/Nav-Bar-Compact.css
+++ b/Neo Zen V1.0.0/NeoZen/Theme/Nav-Bar/Nav-Bar-Compact.css
@@ -1,5 +1,5 @@
 @media (-moz-bool-pref: "zen.view.compact.hide-toolbar") {
-    :root:not([zen-single-toolbar="true"]) {
+    :root[zen-compact-mode="true"]:not([zen-single-toolbar="true"]) {
 
         #zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
             & #zen-appcontent-navbar-container {}
